jv-stream-github-practice-03-minor-changers-according-to-mentor-review