@@ -3,7 +3,6 @@ package practice;
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -57,11 +56,11 @@ public class StreamPractice {
 
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
         return peopleList.stream()
-                .filter(p -> p.getSex()
+                .filter(person -> person.getSex()
                         .equals(Person.Sex.MAN)
-                        && p.getAge() >= fromAge
-                        && p.getAge() <= toAge)
-                .collect(Collectors.toList());
+                        && person.getAge() >= fromAge
+                        && person.getAge() <= toAge)
+                .toList();
     }
 
     /**
@@ -78,11 +77,11 @@ public class StreamPractice {
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
         return peopleList.stream()
-                .filter(p -> p.getAge() >= fromAge
-                        && (p.getSex().equals(Person.Sex.MAN)
-                        && p.getAge() <= maleToAge || p.getSex().equals(Person.Sex.WOMAN)
-                        && p.getAge() <= femaleToAge))
-                .collect(Collectors.toList());
+                .filter(person -> person.getAge() >= fromAge
+                        && (person.getSex().equals(Person.Sex.MAN)
+                        && person.getAge() <= maleToAge || person.getSex().equals(Person.Sex.WOMAN)
+                        && person.getAge() <= femaleToAge))
+                .toList();
     }
 
     /**
@@ -97,7 +96,7 @@ public class StreamPractice {
                         .equals(Person.Sex.WOMAN) && pw.getAge() >= femaleAge)
                 .flatMap(person -> person.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -119,6 +118,6 @@ public class StreamPractice {
                 .filter(candidateValidator)
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
